deploy/hackathon/test3/env.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test3
  labels:
    app: test3
spec:
  template:
    spec:
      containers:
        - name: test3
